--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@SumiFX/Scraper": "github:SumiFX/SumiFX-Scraper",
         "@StarlightsTeam/Scraper": "github:StarlightsTeam/StarlightsTeam-Scraper",
         "google-libphonenumber": "3.2.38",
+        "imagemaker.js": "^2.0.4",
         "axios": "^1.1.2",
         "acrcloud": "^1.4.0",
         "form-data": "^4.0.0",
